samples/_failures_safe/1761718899_493654_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f97415c6.c: In function ‘main’:
./samples/SAFE/__tmp_f97415c6.c:146:17: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
  146 |     int count = read
      |                 ^~~~
      |                 fread
./samples/SAFE/__tmp_f97415c6.c:146:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f97415c6.c:146:5: error: expected ‘,’ or ‘;’ at end of input
  146 |     int count = read
      |     ^~~
./samples/SAFE/__tmp_f97415c6.c:146:5: error: expected declaration or statement at end of input
